@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 9ad5879f2bdb7b8aba60dcbd4a490b7cb4cb3138 CHANGES
+SHA1 a48dc59614e12ac59e1091a4c7338a8c3c8c6e29 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 72eb2ffdd3311b4eee8adc75d208ad0b8248e6ec FastCalc.xs
+SHA1 dc5a0d099232ffe89ad2d08146d4cbfea04da109 FastCalc.xs
 SHA1 7239e6509251999ce2f0af0d61a5ec3de65a7f63 MANIFEST
-SHA1 d2c445679973476e01c03a8f5df530150be2b74b MANIFEST.SKIP
-SHA1 320047b660a3bc138b64281703038f824e5dbaf9 META.yml
+SHA1 42d4a920cbc07283abe63a16586e26b49e458b6d MANIFEST.SKIP
+SHA1 5c0a8cfc21a99812f9fdd3194ad7d0edd650bde0 META.yml
 SHA1 142aa0e24f8f17bab5c69d435072187c546ac653 Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
@@ -31,25 +31,25 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 838aab34457c782451c37209496cf542363b8c55 lib/Math/BigInt/FastCalc.pm
+SHA1 b2c34ce94ef792c7146a67f6a97b0556e5eb0049 lib/Math/BigInt/FastCalc.pm
 SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
-SHA1 86872524ed832cc7e0e93974364ef061523a981b t/01load.t
+SHA1 b5ae0080ba067ecb1253a50834dc6c2946af26b9 t/01load.t
 SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
 SHA1 b0d251938fb1a6f4ab2b731b9f1bfa2ce489ccaf t/03podcov.t
 SHA1 03a9a3dde7d4fcc3eb2e8f245ab0b0253f1d5821 t/bigfltpm.inc
 SHA1 a8f364fea5e2993f5ae7bd3f8463024175d33e24 t/bigfltpm.t
-SHA1 a8f58743d8936a21bbb56c9b92415fd4ea34cc00 t/bigintfc.t
+SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
 SHA1 108a20412616ea34d67b93891383d47e3a619120 t/bigintpm.inc
 SHA1 e91b777f7c22648d8debaf4f663d519decda083b t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 47b841398933fd438c137ea5ffda893497b68443 t/leak.t
-SHA1 2b9490eab4d5371b804a39fb16e77c6bd6bbd006 t/mbi_rand.t
+SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
 SHA1 38d000d99cb2492ab518786e62ab1fae710e0f8d t/mbimbf.inc
 SHA1 2709f7d1acdb39aab910d3ba4c88191b28cc3cfc t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1pJMsACgkQVQvyyU1bchqjhgCgy46unRD3FhVX5hBmCKqpXeS1
-kGsAoL6el5THwWGXAdZ++Yfn92uC17sn
-=VSPt
+iEYEARECAAYFAk1pVIsACgkQVQvyyU1bchrDugCaAlnYPeK0uPAmAN/YKPpxdA09
+6zYAnR3p5prjLKbl40b5YDbczbrqjJOd
+=XoY1
 -----END PGP SIGNATURE-----
