@@ -12,4 +12,3 @@ BEGIN {
 diag("Testing Math::BigInt::FastCalc $Math::BigInt::FastCalc::VERSION");
 diag("==> Perl $], $^X");
 diag("==> Math::BigInt $Math::BigInt::VERSION");
-diag("==> Math::BigInt::Calc $Math::BigInt::Calc::VERSION");
