@@ -1,5 +1,11 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2011-02-26 0.28 pjacklam (7560 tests)
+  * Sync codebases (CPAN vs. blead): include t/mbi_rand.t from blead,
+    fix typos in FastCalc.xs and t/bigintfc.t (Peter John Acklam).
+  * Remove redundant Math::BigInt::FastCalc version info from diagnostic
+    output of 01load.t (Peter John Acklam).
+
 2011-02-26 0.27 pjacklam (7560 tests)
   * Add Math::BigInt::Calc version information to diagnostics output of
     01load.t. This is useful for debugging, since Math::BigInt::FastCalc
